removing marin above project title and adding an extra line after each description item in the project details section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="project col-md-12">
         <!-- description -->
               <div class="desc col-md-6">
-                <p> <h3> Bike There </h3> I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is great for tourists and commuters who are looking for a safe and easy bike route. <br> 
+                <p> <h3 class="project-title"> Bike There </h3> I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is great for tourists and commuters who are looking for a safe and easy bike route. <br><br>
                   <strong> Technology</strong><br>
                   This application is built using the Google Maps API and the Google Elevations API, Ruby on Rails, JavaScript, jQuery </p>
               </div>
@@ -99,9 +99,9 @@
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="panel-body">
             <strong>Design process: </strong> <br>
-            I decided to use Google Maps for this project because it is very familiar interface. However, when I had started the project, I had very little knowledge of JavaScript and JSON and I had to learn the necessary technology in a short amount of time. The first step was figuring out that the JSON response from the Google Directions API included coordinate information at every turn. This information was parsed, repackaged and sent to the Google Elevation API to get the Google Elevation JSON response. Lastly, Google Chart is used to display the corresponding elevation information on the map. <br>
+            I decided to use Google Maps for this project because it is very familiar interface. However, when I had started the project, I had very little knowledge of JavaScript and JSON and I had to learn the necessary technology in a short amount of time. The first step was figuring out that the JSON response from the Google Directions API included coordinate information at every turn. This information was parsed, repackaged and sent to the Google Elevation API to get the Google Elevation JSON response. Lastly, Google Chart is used to display the corresponding elevation information on the map. <br><br>
 
-            <strong>Anything interesting about the project:</strong> <br>
+            <strong>Anything interesting about the project:</strong> <br><br>
 
 
             <strong>Project length:</strong><br>
@@ -122,9 +122,9 @@
             </div>
             <!-- description -->
             <div class="desc col-md-6">
-              <p> <h3> Good or Evil </h3> Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. The concept for this group project was inspired by a growing interest on the web for a space where social interactions can take place anonymously, such as secret sharing sites. We wanted to take that idea further and create a space where a discussion around whether a post is good or evil can happen anonymously. <br> 
+              <p> <h3 class="project-title"> Good or Evil </h3> Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. The concept for this group project was inspired by a growing interest on the web for a space where social interactions can take place anonymously, such as secret sharing sites. We wanted to take that idea further and create a space where a discussion around whether a post is good or evil can happen anonymously. <br><br>
                   <strong> Technology</strong><br>
-                  This application is built using the Amazon S3, Carrierwave, CanvasJS, Ruby on Rails, JavaScript, jQuery, AJAX <br>
+                  This application is built using the Amazon S3, Carrierwave, CanvasJS, Ruby on Rails, JavaScript, jQuery, AJAX <br><br>
                   <strong>Team Members</strong><br>
                   Bruce Lee, Calvin Lam, Joel Brady
                 </p>
@@ -142,10 +142,10 @@
         <div id="collapseTwo" class="panel-collapse collapse">
           <div class="panel-body">
             <strong>Design process:</strong><br>
-            Coding as a group had its own set of challenges as the team members had different set of skills and interests. However, we had a specific vision and a goal in mind and met together throughout the day to discuss what we want to tackle together as well as how to “divide and conqueror” the project. We divided the group to handle the back-end and front-end separately. I was in-charge of the back-end portion of the project and the front-end user interactivity. <br>
+            Coding as a group had its own set of challenges as the team members had different set of skills and interests. However, we had a specific vision and a goal in mind and met together throughout the day to discuss what we want to tackle together as well as how to “divide and conqueror” the project. We divided the group to handle the back-end and front-end separately. I was in-charge of the back-end portion of the project and the front-end user interactivity. <br><br>
 
             <strong>Anything interesting about the project:</strong></br>
-            This group project was an opportunity to learn about collaborative programming experience. We learned how to program collaboratively using the Github version controlling system and learned how to work through code conflicts and merges. It was a great way to understand what a real programming environment is like where many developers will work on the same project collaboratively. <br>
+            This group project was an opportunity to learn about collaborative programming experience. We learned how to program collaboratively using the Github version controlling system and learned how to work through code conflicts and merges. It was a great way to understand what a real programming environment is like where many developers will work on the same project collaboratively. <br><br>
 
             <strong>Project length:</strong></br>
             5 days
@@ -161,10 +161,9 @@
             
             <!-- description -->
             <div class="desc col-md-6">
-              <p> <h3> Project Lorax </h3> <br> Project Lorax measures the soil moisture level for a plants. A user can register plants which will be monitored by the soil moisture sensor implanted in the soil. Raspberry Pi is used to send the soil data to the service layer server which collects the data. When the soil is dry the service side server will send a request to the client side server which will send a tweet to the user reminding the user to water the plant. <br> 
+              <p> <h3 class="project-title"> Project Lorax </h3> <br> Project Lorax measures the soil moisture level for a plants. A user can register plants which will be monitored by the soil moisture sensor implanted in the soil. Raspberry Pi is used to send the soil data to the service layer server which collects the data. When the soil is dry the service side server will send a request to the client side server which will send a tweet to the user reminding the user to water the plant. <br><br>
                   <strong> Technology</strong><br>
-                  This application is built using the Raspbery Pi, soil moisture sensor, ChartJS <br>
-                  <strong> NodeJS, Express, PostgreSQL, MongoDB, BackboneJS </strong><br>
+                  This application is built using the Raspbery Pi, soil moisture sensor, ChartJS, NodeJS, Express, PostgreSQL, MongoDB, BackboneJS </strong><br><br>
                   <strong>Team Member</strong><br>
                   Graham Wong
                 </p>
@@ -189,11 +188,11 @@
             <div class="col-md-12">
               <div class="pro-img col-md-4">
                 <img class="screenshot" src="public/images/sensor.jpg">
-              </div>
+              </div><br><br>
               <div class="desc col-md-8">
                 Project Lorax has a client-side server which is built using NodeJS and MongoDB. Users can login using Twitter OAuth. A user can see their plant and its details as well as add new plants. The plant data is stored in the service-side server which is built using NodeJS and PostgreSQL. The soil moisture is controlled by the Raspberry Pi, which sends the soli data at an interval to the service-side server. Pyhton was used to write the code that controls the Raspberry Pi's behavior.
               </div>
-            </div><br>
+            </div><br><br>
             <div class="col-md-12">
               <div class="desc col-md-4">
                 Design process:
