adding interesting fact about project lorax as the final section of the div

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="col-md-12">
               <div class="pro-img col-md-4">
                 <img class="screenshot" src="public/images/sensor.jpg">
-              </div><br><br>
+              </div>
               <div class="desc col-md-8">
                 <strong>Inspiration for the Project:</strong><br>
                 Raspberry Pi is a credit card-sized computer that can be used with various sensors, LEDs and other simple hardware components to build relatively simple projects. I had an interest in building a project using a Raspberry Pi because I wanted to build a web application that interacts with the physical world. <br>
@@ -204,11 +204,17 @@
                 In a typical project of similar scale, it would make sense to have a single server handle data and client interaction. However, we wanted to experiment with setting up separate servers to handle the data collection and the client interaction separately. We also decided to go away from Ruby on Rails server and decided to take on the challenge of learning how to build this project using NodeJS, a server-side application written in JavaScript, and Express. <br>
                 As you can see in the diagram below, the service-layer server handles the data-related logic using the PostgreSQL database. The client-layer server handles the client interaction through the browser, data logic to send a twitter notification and requests to the service-layer for appropriate data. The client-layer server stores client information in the MongoDB database. <br>
 
-<!-- more text here -->
               </div>
               <div class="pro-img col-md-8">
                 <img class="screenshot" src="http://i.imgur.com/DARkd14.png">
               </div>
+            
+            <div class="desc col-md-12">
+              <strong>Anything Interesting about the Project: </strong><br>
+              No plant was harmed during this project.<br>
+
+            </div>
+
             </div>
           </div>
         </div>
