adding col width 12 to the collapsing proj description div

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
     <div class="projects row" id="projects">
       <div class="panel-group" id="accordion">
+        
         <div class="panel panel-default">
         <!-- first project --------------------  BIKE THERE -->
           <div class="panel-heading">
@@ -101,11 +102,17 @@
           </div>
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="panel-body">
-            <strong>Design process: </strong> <br>
-            I decided to use Google Maps for this project because it is very familiar interface. However, when I had started the project, I had very little knowledge of JavaScript and JSON and I had to learn the necessary technology in a short amount of time. The first step was figuring out that the JSON response from the Google Directions API included coordinate information at every turn. This information was parsed, repackaged and sent to the Google Elevation API to get the Google Elevation JSON response. Lastly, Google Chart is used to display the corresponding elevation information on the map. <br><br>
+            <div class="col-md-12">
+              <div class="pro-img col-md-4">
+                <img class="screenshot" src="http://i.imgur.com/8SIq5ux.jpg">
+              </div>
+              <div class="desc col-md-8">
+                <strong>Design process: </strong> <br>
+                I decided to use Google Maps for this project because it is very familiar interface. However, when I had started the project, I had very little knowledge of JavaScript and JSON and I had to learn the necessary technology in a short amount of time. The first step was figuring out that the JSON response from the Google Directions API included coordinate information at every turn. This information was parsed, repackaged and sent to the Google Elevation API to get the Google Elevation JSON response. Lastly, Google Chart is used to display the corresponding elevation information on the map. <br><br>
 
-            <strong>Anything interesting about the project:</strong> <br><br>
-
+                <strong>Anything interesting about the project:</strong> <br><br>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -142,12 +149,18 @@
         </div>
         <div id="collapseTwo" class="panel-collapse collapse">
           <div class="panel-body">
-            <strong>Design process:</strong><br>
-            Coding as a group had its own set of challenges as the team members had different set of skills and interests. However, we had a specific vision and a goal in mind and met together throughout the day to discuss what we want to tackle together as well as how to “divide and conqueror” the project. We divided the group to handle the back-end and front-end separately. I was in-charge of the back-end portion of the project and the front-end user interactivity. <br><br>
+            <div class="col-md-12">
+              <div class="pro-img col-md-4">
+                <img class="screenshot" src="http://i.imgur.com/8SIq5ux.jpg">
+              </div>
+              <div class="desc col-md-8">
+                <strong>Design process:</strong><br>
+                Coding as a group had its own set of challenges as the team members had different set of skills and interests. However, we had a specific vision and a goal in mind and met together throughout the day to discuss what we want to tackle together as well as how to “divide and conqueror” the project. We divided the group to handle the back-end and front-end separately. I was in-charge of the back-end portion of the project and the front-end user interactivity. <br><br>
 
-            <strong>Anything interesting about the project:</strong></br>
-            This group project was an opportunity to learn about collaborative programming experience. We learned how to program collaboratively using the Github version controlling system and learned how to work through code conflicts and merges. It was a great way to understand what a real programming environment is like where many developers will work on the same project collaboratively. <br><br>
-
+                <strong>Anything interesting about the project:</strong></br>
+                This group project was an opportunity to learn about collaborative programming experience. We learned how to program collaboratively using the Github version controlling system and learned how to work through code conflicts and merges. It was a great way to understand what a real programming environment is like where many developers will work on the same project collaboratively. <br><br>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -208,12 +221,11 @@
               <div class="pro-img col-md-8">
                 <img class="screenshot" src="http://i.imgur.com/DARkd14.png">
               </div>
-            
-            <div class="desc col-md-12">
-              <strong>Anything Interesting about the Project: </strong><br>
-              No plant was harmed during this project.<br>
-
-            </div>
+              <br><br>
+              <div class="desc col-md-12">
+                <strong>Anything Interesting about the Project: </strong><br>
+                No plant was harmed during this project.<br>
+              </div>
 
             </div>
           </div>
