adding the second line break to make the space appear after the intro paragraph

--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
 
     <div class="projects row" id="projects">
       <div class="panel-group" id="accordion">
-        
+
         <div class="panel panel-default">
         <!-- first project --------------------  BIKE THERE -->
           <div class="panel-heading">
             <div class="project col-md-12">
         <!-- description -->
               <div class="desc col-md-6">
-                <p> <h3 class="project-title"> Bike There </h3> I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is a bicycle-commuting app that displays a turn-by-turn direction as well as elevation information along a chosen route. Bike There is great for tourists and commuters who are looking for a safe and easy bike route.  <br style="line-height:0px;" />
+                <p> <h3 class="project-title"> Bike There </h3> I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is a bicycle-commuting app that displays a turn-by-turn direction as well as elevation information along a chosen route. Bike There is great for tourists and commuters who are looking for a safe and easy bike route.  <br style="line-height:0px;"/><br style="line-height:0px;" />
                   <strong> Technology</strong><br>
-                  This application is built using the Google Maps API and the Google Elevations API, Ruby on Rails, JavaScript, jQuery <br style="line-height:0px;" />
+                  This application is built using the Google Maps API and the Google Elevations API, Ruby on Rails, JavaScript, jQuery <br style="line-height:0px;" /><br style="line-height:0px;" />
                   <strong>Project Length</strong><br>
                   5 days
                 </p>
