splitting the nav bar links to left and right

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 <body>
 <!-- navbar -->
   <nav class="navigation-bar">
-    <a id="name">Samuel Choi</a>
-    <a href="#home">Home</a>
-    <a href="#aboutme">About </a>
-    <a href="#projects">Projects </a>
-    <a href="#contact">Contact Me </a>
+    <div class="nav-left">
+      <a id="name">Samuel Choi</a>
+    </div>
+    <div class="nav-right">
+      <a href="#home">Home</a>
+      <a href="#aboutme">About </a>
+      <a href="#projects">Projects </a>
+      <a href="#contact">Contact Me </a>
+    </div>
   </nav>
 
   <div class="container">
@@ -79,9 +83,10 @@
             <div class="project col-md-12">
         <!-- description -->
               <div class="desc col-md-6">
-                <p> <h3 class="project-title"> Bike There </h3> I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is a bicycle-commuting app that displays a turn-by-turn direction as well as elevation information along a chosen route. Bike There is great for tourists and commuters who are looking for a safe and easy bike route.  <br style="line-height:0px;"/><br style="line-height:0px;" />
+                <p> 
+                  <h3 class="project-title"> Bike There </h3> I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is a bicycle-commuting app that displays a turn-by-turn direction as well as elevation information along a chosen route. Bike There is great for tourists and commuters who are looking for a safe and easy bike route.  <br><br>
                   <strong> Technology</strong><br>
-                  This application is built using the Google Maps API and the Google Elevations API, Ruby on Rails, JavaScript, jQuery <br style="line-height:0px;" /><br style="line-height:0px;" />
+                  This application is built using the Google Maps API and the Google Elevations API, Ruby on Rails, JavaScript, jQuery <br><br>
                   <strong>Project Length</strong><br>
                   5 days
                 </p>
@@ -128,14 +133,15 @@
             </div>
             <!-- description -->
             <div class="desc col-md-6">
-              <p> <h3 class="project-title"> Good or Evil </h3> Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. The concept for this group project was inspired by a growing interest on the web for a space where social interactions can take place anonymously, such as secret sharing sites. We wanted to take that idea further and create a space where a discussion around whether a post is good or evil can happen anonymously. <br><br>
-                  <strong> Technology</strong><br>
-                  This application is built using the Amazon S3, Carrierwave, CanvasJS, Ruby on Rails, JavaScript, jQuery, AJAX <br><br>
-                  <strong>Team Members</strong><br>
-                  Bruce Lee, Calvin Lam, Joel Brady<br><br>
-                  <strong>Project Length</strong></br>
-                  5 days
-                </p>
+              <p> 
+                <h3 class="project-title"> Good or Evil </h3> Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. The concept for this group project was inspired by a growing interest on the web for a space where social interactions can take place anonymously, such as secret sharing sites. We wanted to take that idea further and create a space where a discussion around whether a post is good or evil can happen anonymously. <br><br>
+                <strong> Technology</strong><br>
+                This application is built using the Amazon S3, Carrierwave, CanvasJS, Ruby on Rails, JavaScript, jQuery, AJAX <br><br>
+                <strong>Team Members</strong><br>
+                Bruce Lee, Calvin Lam, Joel Brady<br><br>
+                <strong>Project Length</strong></br>
+                5 days
+              </p>
             </div>
           </div>
           <h4 class="panel-title click-here">
@@ -172,14 +178,15 @@
             
             <!-- description -->
             <div class="desc col-md-6">
-              <p> <h3 class="project-title"> Project Lorax </h3> Project Lorax monitors the soil moisture level for your plants. When the soil is dry, the app will send you a tweet notification to remind you to water your plant. <br><br>
-                  <strong> Technology</strong><br>
-                  This application is built using the Raspbery Pi, soil moisture sensor, ChartJS, NodeJS, Express, PostgreSQL, MongoDB, BackboneJS </strong><br><br>
-                  <strong>Team Member</strong><br>
-                  Graham Wong <br><br>
-                  <strong>Project Length </strong><br>
-                  14 days
-                </p>
+              <p> 
+                <h3 class="project-title"> Project Lorax </h3> Project Lorax monitors the soil moisture level for your plants. When the soil is dry, the app will send you a tweet notification to remind you to water your plant. <br><br>
+                <strong> Technology</strong><br>
+                This application is built using the Raspbery Pi, soil moisture sensor, ChartJS, NodeJS, Express, PostgreSQL, MongoDB, BackboneJS </strong><br><br>
+                <strong>Team Member</strong><br>
+                Graham Wong <br><br>
+                <strong>Project Length </strong><br>
+                14 days
+              </p>
             </div>
 
             <!-- screenshot and link -->
