adding a small profile thumbnail to the nav

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <!-- navbar -->
   <nav class="navigation-bar">
     <div class="nav-left">
+      <a href="#home"><img class="profilepic-sm"></a>
       <a id="name">Samuel Choi</a>
     </div>
     <div class="nav-right">
