resizing the thumbnail profile pic

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- navbar -->
   <nav class="navigation-bar">
     <div class="nav-left">
-      <a href="#home"><img class="profilepic-sm"></a>
+      <a href="#home"><img class="profilepic-sm" src="http://i.imgur.com/fsM4ywVs.jpg?1"></a>
       <a id="name">Samuel Choi</a>
     </div>
     <div class="nav-right">
