placing the nav links inside the container

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
   </head>
 <body>
 <!-- navbar -->
+<div class="container">
   <nav class="navigation-bar">
     <div class="nav-left">
       <a href="#home"><img class="profilepic-sm" src="http://i.imgur.com/fsM4ywVs.jpg?1"></a>
-      <a id="name">Samuel Choi</a>
+      <a id="name" href="#home">Samuel Choi</a>
     </div>
     <div class="nav-right">
       <a href="#home">Home</a>
@@ -34,7 +35,7 @@
     </div>
   </nav>
 
-  <div class="container">
+  <!-- <div class="container"> -->
 
   <div id="first-div">
 
@@ -44,7 +45,6 @@
 
         
         <div class="col-md-4">
-          <h1 class="myname"> Samuel Choi </h1>
           <a href="#aboutme"><img class="profilepic" src="public/images/twinpeaks.jpg"/></a>
         </div>
         <div class="col-md-8">
