--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
     <!-- closing #fourth-div -->
   </div>
   <div id="fifth-div">
+    <p>© 2014 Samuel Choi. All Rights Reserved. </p>
   </div>
   
 </body>
