--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         <!-- description -->
               <div class="desc col-md-6">
                 <p> 
-                  <h3 class="project-title"> Bike There </h3> I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is a bicycle-commuting app that displays a turn-by-turn direction as well as elevation information along a chosen route. Bike There is great for tourists and commuters who are looking for a safe and easy bike route.  <br><br>
+                  <h3 class="project-title"> Bike There </h3> <a class="social-sm" href="https://github.com/jongmini"><i class="fa fa-github fa"></i></a>
+                   I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is a bicycle-commuting app that displays a turn-by-turn direction as well as elevation information along a chosen route. Bike There is great for tourists and commuters who are looking for a safe and easy bike route.  <br><br>
                   <strong> Technology</strong><br>
                   This application is built using the Google Maps API and the Google Elevations API, Ruby on Rails, JavaScript, jQuery <br><br>
                   <strong>Project Length</strong><br>
